--- a/.github/workflows/arduino-ci.yml
+++ b/.github/workflows/arduino-ci.yml
@@ -29,4 +29,4 @@ jobs:
           arduino-cli core install esp32:esp32
 
       - name: Compile sketch
-        run: arduino-cli compile --fqbn esp32:esp32:esp32 firmware/esp32/src/main.ino
+        run: arduino-cli compile --fqbn esp32:esp32:esp32 firmware/esp32/main/main.ino
