--- a/.github/workflows/arduino-ci.yml
+++ b/.github/workflows/arduino-ci.yml
@@ -29,7 +29,7 @@ jobs:
           arduino-cli core install esp32:esp32
 
           # Install all required libraries
-          arduino-cli lib install "Firebase ESP Client"
+          arduino-cli lib install https://github.com/mobizt/Firebase-ESP-Client.git
           arduino-cli lib install "WiFi"
           arduino-cli lib install "ArduinoJson"
           arduino-cli lib install "Adafruit Unified Sensor"
