--- a/.github/workflows/arduino-ci.yml
+++ b/.github/workflows/arduino-ci.yml
@@ -31,7 +31,8 @@ jobs:
       - name: Install all required libraries
         run: |
           arduino-cli config set library.enable_unsafe_install true
-          arduino-cli lib install --git-url https://github.com/mobizt/Firebase-ESP-Client
+          arduino-cli lib install --git-url https://github.com/mobizt/Firebase-ESP-Client7
+          arduino-cli lib install "MPU6050_light"
           arduino-cli lib install "Adafruit Unified Sensor"
           arduino-cli lib install "DHT sensor library"
 
