--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -17,7 +17,8 @@
     "axios": "^1.12.2",
     "dotenv": "^17.2.3",
     "firebase-admin": "^12.6.0",
-    "firebase-functions": "^6.0.1"
+    "firebase-functions": "^6.0.1",
+    "telegraf": "^4.16.3"
   },
   "devDependencies": {
     "eslint": "^8.15.0",
