--- a/dashboard/iot-dashboard/package.json
+++ b/dashboard/iot-dashboard/package.json
@@ -12,6 +12,8 @@
     "firebase": "^12.2.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-google-button": "^0.8.0",
+    "react-router-dom": "^7.9.4",
     "react-scripts": "5.0.1",
     "recharts": "^3.2.0",
     "web-vitals": "^2.1.4"
